<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"

            android:title="@string/LoginScreenNav" />
        <!-- android:icon="@drawable/ic_menu_camera" -->
        <item
            android:id="@+id/nav_inputout"

            android:title="@string/InputOutputNav" />
        <!-- android:icon="@drawable/ic_menu_gallery" -->
        <item
            android:id="@+id/nav_trainingScreen"

            android:title="@string/TrainingScreenNav" />
        <!-- android:icon="@drawable/ic_menu_slideshow" -->
        <item
            android:id="@+id/nav_chatScreen"

            android:title="@string/ChatScreenNav" />
        <item
            android:id="@+id/nav_lessonsScreen"

            android:title="@string/lessons" />
        <!--  android:icon="@drawable/ic_menu_manage" -->
    </group>

</menu>
