<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rect_divider" />


    <TextView
        android:id="@+id/titleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="M --- RSE."
        android:textSize="65sp"
        android:textColor="@color/colorOrangeAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_main_lessons"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:background="@drawable/oval_button"
        android:text="@string/lessons"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_main_text_to_morse"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/translator_button"
        android:text="@string/textToMorse"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_main_morse_to_text"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="208dp"
        android:background="@drawable/translator_button"
        android:text="@string/morseToText"
        android:textAllCaps="false"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btn_main_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/quarter_circle_rl"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_main_settings"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/quarter_circle_lr"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />


</RelativeLayout>