<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightGrey">

    <TextView
        android:id="@+id/current_training_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/TrainingScreenNextWordMarginTop"
        android:text="@string/defaultText"
        android:textColor="@color/colorTrainingNextWordText"
        android:textSize="@dimen/TrainingScreenNextWordTextSize"
        />

    <TextView
        android:id="@+id/current_training_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_training_word"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/TrainingScreenNextLetterMarginTop"
        android:text="@string/defaultChar1"
        android:textColor="@color/colorTrainingNextWordText"
        android:textSize="@dimen/TrainingScreenNextLetterTextSize"
        />

    <TextView
        android:id="@+id/current_training_letter_morse_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_training_letter"
        android:layout_centerInParent="true"
        android:text="@string/defaultMorse1"
        android:textColor="@color/colorTrainingNextWordText"
        android:textSize="@dimen/TrainingScreenNextLetterTextSize"
        />

    <RelativeLayout
        android:id="@+id/training_screen_button_view"
        android:layout_below="@+id/current_training_letter_morse_code"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/training_screen_circular_button">

        <View
            android:id="@+id/training_screen_button"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/TrainingButtonCircleDiameter"
            android:layout_height="@dimen/TrainingButtonCircleDiameter"
            android:background="@drawable/training_screen_circular_button"/>

        <TextView
            android:id="@+id/current_predicted_letter"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/TrainingButtonTextSize"
            android:text="@string/defaultChar2"/>

        <TextView
            android:id="@+id/current_morse_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/TrainingMorseInputMarginBottom"
            android:textStyle="bold"
            android:textSize="@dimen/TrainingButtonTextSize"
            android:text="@string/defaultMorse2"/>

    </RelativeLayout>

    <Button
        android:id="@+id/training_screen_reset_button"
        android:layout_height="@dimen/TrainingResetButtonDiameter"
        android:layout_width="@dimen/TrainingResetButtonDiameter"
        android:layout_margin="@dimen/TrainingResetButtonMargins"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/ResetBtn"
        android:textSize="@dimen/TrainingResetButtonTextSize"
        android:background="@drawable/training_screen_circular_reset_button"/>

    <TextView
        android:id="@+id/temptextview"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <ProgressBar
        android:id="@+id/training_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/TrainingMorseProgressBarWidth"
        android:layout_height="@dimen/TrainingMorseProgressBarHeight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:max="100"
        android:progress="0"
        android:layout_marginBottom="@dimen/TrainingMorseProgressBarMarginBottom"
        android:layout_marginLeft="@dimen/TrainingMorseProgressBarMarginLeft"/>

</RelativeLayout>