<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rect_divider" />


    <TextView
        android:id="@+id/titleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:text="@string/login"
        android:textColor="@color/colorOrangeAccent"
        android:textSize="40sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:textSize="25sp"
        android:hint="@string/emailTextView"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:hint="@string/passwordTextView"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:background="@drawable/oval_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:textAllCaps="false"
        android:background="@drawable/oval_button"
        android:textSize="25sp"
        android:text="@string/registerBtn" />

</RelativeLayout>