<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2">

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rect_divider" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:gravity="bottom|start"
        android:text="@string/settings"
        android:textColor="@color/colorOrangeAccent"
        android:textSize="40sp"
        android:textStyle="bold" />

    <!--switch to toggle haptic on/off-->
    <Switch
        android:id="@+id/haptic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:layout_weight="2"
        android:checked="true"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:text="@string/hapticSetting"
        android:textSize="20dp"
        android:textStyle="bold" />

    <!--switch to toggle sound on/off-->
    <Switch
        android:id="@+id/sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:layout_weight="2"
        android:checked="true"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:text="@string/soundSetting"
        android:textSize="20dp"
        android:textStyle="bold" />

    <!--switch to toggle light on/off-->
    <Switch
        android:id="@+id/light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="240dp"
        android:layout_weight="2"
        android:checked="true"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:text="@string/lightSetting"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/frequencyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="214dp"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:text="@string/soundFreqSetting"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:textStyle="bold" />

    <!--seekbar to adjust sound frequency-->
    <SeekBar
        android:id="@+id/frequencySeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frequencyTextView"
        android:layout_marginTop="-214dp"
        android:layout_weight="1"
        android:max="12"
        android:min="0"
        android:progress="6" />

    <TextView
        android:id="@+id/inputSpeedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="93dp"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:text="@string/speedSetting"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:textStyle="bold" />

    <!--seekbar to adjust input touch speed-->
    <SeekBar
        android:id="@+id/touchSpeed"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputSpeedText"
        android:layout_marginTop="-93dp"
        android:layout_weight="1"
        android:max="10"
        android:progress="5" />


</RelativeLayout>